:bug: fix: Wrong spacing in chrome

--- a/src/components/molecules/IllustrationsOrganization.module.scss
+++ b/src/components/molecules/IllustrationsOrganization.module.scss
@@ -7,7 +7,6 @@
   overflow: hidden;
 
   column-count: 4;
-  gap: 1rem;
 }
 
 .imageViewer {
