--- a/src/pages/AboutMe.module.scss
+++ b/src/pages/AboutMe.module.scss
@@ -1,7 +1,7 @@
 @use "/src/theme/screens.scss";
 
 #aboutMe {
-  margin: 2rem 0 2rem 0;
+  padding: 2rem 0 2rem 0;
 
   & > * {
     width: 85%;
