--- a/src/pages/Projects.module.scss
+++ b/src/pages/Projects.module.scss
@@ -1,7 +1,7 @@
 #projects {
   position: relative;
 
-  margin: 2rem 0 2rem 0;
+  padding: 2rem 0 2rem 0;
 
   & > * {
     width: 85%;
